kubectl/yamls/serverStub/serviceServerStub.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  type: LoadBalancer
  ports:
    - port: 443
      targetPort: 443
